# CommaAgentsHub

./: .gitignore  README.md  pyproject.toml
agents/cloai/: README.md
agents/cloai/bard/: README.md  __init__.py  agent.py
agents/cloai/hugging_face/: README.md  __init__.py  agent.py  example.py  requirements.txt
agents/cloai/llama_cpp/: README.md  __init__.py
agents/cloai/mlx/: README.md  __init__.py  agent.py  generate.py  models.py  requirements.txt
agents/cloai/openai/: README.md  __init__.py
agents/cloai/openai_agent/: README.md
agents/cloai/together/: README.md  __init__.py  agent.py
hub/agents/nateageek/: __init__.py
hub/agents/nateageek/openai_agent/: __init__.py
